--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
+    "ts-loader": "^7.0.0",
+    "typescript": "^3.8.3",
     "vue-loader": "^15.9.1",
+    "vue-property-decorator": "^8.4.1",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
